@@ -1,54 +1,57 @@
 package visitor;
 
 import calculator.Expression;
-import calculator.MyNumber;
 import calculator.Operation;
+import calculator.Value;
 
 import java.util.ArrayList;
 
-/** Evaluation is a concrete visitor that serves to
+/**
+ * Evaluation is a concrete visitor that serves to
  * compute and evaluate the results of arithmetic expressions.
  */
-public class Evaluator extends Visitor {
+public class Evaluator<T> extends Visitor<T> {
 
     /**
-     * Default constructor of the class. Does not initialise anything.
+     * The result of the evaluation will be stored in this private variable
      */
-    public Evaluator() {}
+    private Value<T> computedValue;
 
-    /** The result of the evaluation will be stored in this private variable */
-    private int computedValue;
-
-    /** getter method to obtain the result of the evaluation
+    /**
+     * getter method to obtain the result of the evaluation
      *
      * @return an Integer object containing the result of the evaluation
      */
-    public Integer getResult() { return computedValue; }
+    public Value<T> getResult() {
+        return computedValue;
+    }
 
-    /** Use the visitor design pattern to visit a number.
+    /**
+     * Use the visitor design pattern to visit a number.
      *
      * @param n The number being visited
      */
-    public void visit(MyNumber n) {
-        computedValue = n.getValue();
+    public void visit(Value<T> n) {
+        computedValue = n;
     }
 
-    /** Use the visitor design pattern to visit an operation
+    /**
+     * Use the visitor design pattern to visit an operation
      *
      * @param o The operation being visited
      */
-    public void visit(Operation o) {
-        ArrayList<Integer> evaluatedArgs = new ArrayList<>();
+    public void visit(Operation<T> o) {
+        ArrayList<Value<T>> evaluatedArgs = new ArrayList<>();
         //first loop to recursively evaluate each subexpression
-        for(Expression a:o.args) {
+        for (Expression<T> a : o.args) {
             a.accept(this);
             evaluatedArgs.add(computedValue);
         }
         //second loop to accumulate all the evaluated subresults
-        int temp = evaluatedArgs.get(0);
+        Value<T> temp = evaluatedArgs.getFirst();
         int max = evaluatedArgs.size();
-        for(int counter=1; counter<max; counter++) {
-            temp = o.op(temp,evaluatedArgs.get(counter));
+        for (int counter = 1; counter < max; counter++) {
+            temp = o.op(temp, evaluatedArgs.get(counter));
         }
         // store the accumulated result
         computedValue = temp;
